更新HTML基本结构.html

--- a/basic_knowledge/html元素.html
+++ b/basic_knowledge/html元素.html
@@ -2,11 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML 基本结构</title>
+        <title>HTML 元素</title>
     </head>
     <body>
         <h1>HTML 元素</h1>
-        
+        <p>HTML 元素以开始标签（opening tag）起始，以结束标签（closing tag）终止；</p>
 
+        <p>大多数 HTML 元素可以嵌套使用；</p>
+
+        <h2>HTML空元素</h2>
+        <p>开始标签既标记开始，也标记结束。为了与XHTML以及其他未来版本HTML兼容，应该加上反斜线。</p>
     </body>
 </html>
