--- a/HTML/15.巩固.html
+++ b/HTML/15.巩固.html
@@ -14,7 +14,7 @@
     <!-- link 标签可以设置标题旁的小图标 -->
     <link rel="shortcut icon" href="./images/avatar.png"/>
     <!-- link 标签可以用来引入外部样式表 -->
-    <link rel="stylesheet" type="text/css" href="/css/mystyle.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/mystyle.css"/>
     <!-- meta 标签可以设置页面的关键词 -->
     <meta name="keywords" content="HTML, 知识点">
     <!-- meta 标签可以设置页面的描述 -->
