--- a/HTML/2.html基础.html
+++ b/HTML/2.html基础.html
@@ -12,6 +12,6 @@
     <p>另一个段落。</p>
     <a href="https://www.runoob.com">这是一个链接</a>
     <br />
-    <img decoding="async" src="/images/avatar.png" width="100" height="100"/>
+    <img decoding="async" src="./images/avatar.png" width="100" height="100"/>
   </body>
 </html>
