--- a/HTML/6.html链接.html
+++ b/HTML/6.html链接.html
@@ -12,7 +12,7 @@
     <p>我们用 a 标签创建链接，用 href 属性指定链接地址：</p>
     <h2>多种类型的链接</h2>
     <p>这个<a href="https://wlcheng.cc/">链接</a>将带你到我的主页。</p>
-    <p>这个图片<a href="https://wlcheng.cc/" id="first"><img decoding="async" src="/images/avatar.png" width="20" height="20"/></a>也将带你到我的主页。</p>
+    <p>这个图片<a href="https://wlcheng.cc/" id="first"><img decoding="async" src="./images/avatar.png" width="20" height="20"/></a>也将带你到我的主页。</p>
     <h2>链接标签的属性</h2>
     <h3>target 属性</h3>
     <p> target 属性指明将在哪里显示这个链接页面，默认在当前标签页直接跳转，值 "_blank" 表示在浏览器新标签页打开；"_top" 可以跳出当前的框架；"_self" 在同一个窗口打开新的页面；"_parent" 在父窗口中打开新的页面。</p>
