--- a/HTML/8.htmlCSS.html
+++ b/HTML/8.htmlCSS.html
@@ -7,8 +7,8 @@
     <!-- base 指明文档中相对路径的根 -->
     <!-- <base href="https://wlcheng.cc/" target="_blank"/> -->
     <!-- link 一般用来引入样式表，也用来引入标题图标 -->
-    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
-    <link rel="shortcut icon" href="images/avatar.png"/>
+    <link rel="stylesheet" type="text/css" href="./css/mystyle.css">
+    <link rel="shortcut icon" href="./images/avatar.png"/>
     <!-- atyle 直接定义文档样式 -->
     <style type="text/css">
       body {
