--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/main.css" />
+    <!-- <link rel="stylesheet" href="./css/main.css" /> -->
     <style type="text/css">
       body {
         
@@ -20,6 +20,22 @@
         background-image: url(./images/white_wall_hash.webp);
         padding: 10pt;
         margin: 20pt;
+        border-radius: 5px;
+        box-shadow: 0 10px 26px rgba(0,0,0,0.16);
+      }
+      table,tr {
+        vertical-align: top;
+        width: 80%;
+        margin: auto;
+      }
+      #inpage {
+        top: 100px;
+        left: 250px;
+        right: 50px;
+        position: fixed;
+        background-color: #c4d7d6; 
+        /* height: "500"; */
+        border: 1px;
       }
     </style>
   </head>
@@ -33,44 +49,58 @@
     <![endif]-->
     <div id="main">
       <h1>Web 相关知识学习</h1>
+      <p>习自菜鸟教程：<a href="https://www.runoob.com/" target="_blank">https://www.runoob.com/</a></p>
       <hr/>
-      <h2>HTML</h2>
-      <ol>
-        <li><a href="./HTML/1.html简介.html" alt="html 简介">html 简介</a></li>
-        <li><a href="./HTML/2.html基础.html" alt="html 基础">html 基础</a></li>
-        <li><a href="./HTML/3.html标题.html" alt="html 标题">html 标题</a></li>
-        <li><a href="./HTML/4.html段落.html" alt="html 段落">html 段落</a></li>
-        <li><a href="./HTML/5.html文本格式化.html" alt="html 文本">html 文本格式化</a></li>
-        <li><a href="./HTML/6.html链接.html" alt="html 链接">html 链接</a></li>
-        <li><a href="./HTML/7.html头部.html" alt="html 头部">html 头部</a></li>
-        <li><a href="./HTML/8.htmlCSS.html" alt="html CS">html CSS</a></li>
-        <li><a href="./HTML/9.html图像.html" alt="html 图像">html 图像</a></li>
-        <li><a href="./HTML/10.html表格.html" alt="html 表格">html 表格</a></li>
-        <li><a href="./HTML/10.html表格.html" alt="html 表格">html 表格2</a></li>
-        <li><a href="./HTML/11.html列表.html" alt="html 列表">html 列表</a></li>
-        <li><a href="./HTML/12.html区块.html" alt="html 区块">html 区块</a></li>
-        <li><a href="./HTML/13.html布局.html" alt="html 布局">html 布局</a></li>
-        <li><a href="./HTML/14.html表单.html" alt="html 表单">html 表单</a></li>
-        <li><a href="./HTML/15.巩固.html" alt="巩固">巩固总结</a></li>
-        <li><a href="./HTML/16.html框架.html" alt="html 框架">html 框架</a></li>
-        <li><a href="./HTML/17.html颜色.html" alt="html 颜色">html 颜色</a></li>
-        <li><a href="./HTML/18.html脚本.html" alt="html 脚本">html 脚本</a></li>
-      </ol>
-      <h2>CSS</h2>
-      <ol>
-        <li><a href="1.css语法.html" alt="css 语法">css 语法</a></li>
-        <li><a href="2.css选择器.html" alt="css 选择器">css 选择器</a></li>
-        <li><a href="3.css创建.html" alt="css 创建">css 创建</a></li>
-        <li><a href="4.css背景.html" alt="css 背景">css 背景</a></li>
-        <li><a href="5.css文本.html" alt="css 文本">css 文本</a></li>
-        <li><a href="6.css字体.html" alt="css 字体">css 字体</a></li>
-        <li><a href="7.css链接.html" alt="css 链接">css 链接</a></li>
-        <li><a href="8.css列表.html" alt="css 列表">css 列表</a></li>
-        <li><a href="9.css表格.html" alt="css 表格">css 表格</a></li>
-        <li><a href="10.css盒子模型.html" alt="css 盒子模型">css 盒子模型</a></li>
-      </ol>
-    </div>
+      <table id="content">
+        <tr>
+          <td>
+            <h2>HTML</h2>
+            <ol>
+              <li><a href="./HTML/1.html简介.html" alt="html 简介" target="_blank">html 简介</a></li>
+              <li><a href="./HTML/2.html基础.html" alt="html 基础" target="_blank">html 基础</a></li>
+              <li><a href="./HTML/3.html标题.html" alt="html 标题" target="_blank">html 标题</a></li>
+              <li><a href="./HTML/4.html段落.html" alt="html 段落" target="_blank">html 段落</a></li>
+              <li><a href="./HTML/5.html文本格式化.html" alt="html 文本" target="_blank">html 文本格式化</a></li>
+              <li><a href="./HTML/6.html链接.html" alt="html 链接" target="_blank">html 链接</a></li>
+              <li><a href="./HTML/7.html头部.html" alt="html 头部" target="_blank">html 头部</a></li>
+              <li><a href="./HTML/8.htmlCSS.html" alt="html CS" target="_blank">html CSS</a></li>
+              <li><a href="./HTML/9.html图像.html" alt="html 图像" target="_blank">html 图像</a></li>
+              <li><a href="./HTML/10.html表格.html" alt="html 表格" target="_blank">html 表格</a></li>
+              <li><a href="./HTML/10.html表格.html" alt="html 表格" target="_blank">html 表格2</a></li>
+              <li><a href="./HTML/11.html列表.html" alt="html 列表" target="_blank">html 列表</a></li>
+              <li><a href="./HTML/12.html区块.html" alt="html 区块" target="_blank">html 区块</a></li>
+              <li><a href="./HTML/13.html布局.html" alt="html 布局" target="_blank">html 布局</a></li>
+              <li><a href="./HTML/14.html表单.html" alt="html 表单" target="_blank">html 表单</a></li>
+              <li><a href="./HTML/15.巩固.html" alt="巩固" target="_blank">巩固总结</a></li>
+              <li><a href="./HTML/16.html框架.html" alt="html 框架" target="_blank">html 框架</a></li>
+              <li><a href="./HTML/17.html颜色.html" alt="html 颜色" target="_blank">html 颜色</a></li>
+              <li><a href="./HTML/18.html脚本.html" alt="html 脚本" target="_blank">html 脚本</a></li>
+            </ol>            
+          </td>
+          <td>
+            <h2>CSS</h2>
+            <ol>
+              <li><a href="./css/1.css语法.html" alt="css 语法" target="_blank">css 语法</a></li>
+              <li><a href="./css/2.css选择器.html" alt="css 选择器" target="_blank">css 选择器</a></li>
+              <li><a href="./css/3.css创建.html" alt="css 创建" target="_blank">css 创建</a></li>
+              <li><a href="./css/4.css背景.html" alt="css 背景" target="_blank">css 背景</a></li>
+              <li><a href="./css/5.css文本.html" alt="css 文本" target="_blank">css 文本</a></li>
+              <li><a href="./css/6.css字体.html" alt="css 字体" target="_blank">css 字体</a></li>
+              <li><a href="./css/7.css链接.html" alt="css 链接" target="_blank">css 链接</a></li>
+              <li><a href="./css/8.css列表.html" alt="css 列表" target="_blank">css 列表</a></li>
+              <li><a href="./css/9.css表格.html" alt="css 表格" target="_blank">css 表格</a></li>
+              <li><a href="./css/10.css盒子模型.html" alt="css 盒子模型" target="_blank">css 盒子模型</a></li>
+            </ol>            
+          </td>
 
+        </tr>
+      </table>
+
+    </div>
+    <!-- <div id="inpage">
+      <iframe name="trueman" loading="lazy" src="https://wlchengg.github.io/WHS/" width="70%" height="800" frameborder="0">
+      </iframe>
+    </div> -->
     <script src="" async defer></script>
   </body>
 </html>
