--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
           <td>
             <h2>CSS</h2>
             <ol>
-              <li><a href="./css/1.css语法.html" alt="css 语法" target="_blank">css 语法</a></li>
-              <li><a href="./css/2.css选择器.html" alt="css 选择器" target="_blank">css 选择器</a></li>
-              <li><a href="./css/3.css创建.html" alt="css 创建" target="_blank">css 创建</a></li>
-              <li><a href="./css/4.css背景.html" alt="css 背景" target="_blank">css 背景</a></li>
-              <li><a href="./css/5.css文本.html" alt="css 文本" target="_blank">css 文本</a></li>
-              <li><a href="./css/6.css字体.html" alt="css 字体" target="_blank">css 字体</a></li>
-              <li><a href="./css/7.css链接.html" alt="css 链接" target="_blank">css 链接</a></li>
-              <li><a href="./css/8.css列表.html" alt="css 列表" target="_blank">css 列表</a></li>
-              <li><a href="./css/9.css表格.html" alt="css 表格" target="_blank">css 表格</a></li>
-              <li><a href="./css/10.css盒子模型.html" alt="css 盒子模型" target="_blank">css 盒子模型</a></li>
+              <li><a href="./CSS/1.css语法.html" alt="css 语法" target="_blank">css 语法</a></li>
+              <li><a href="./CSS/2.css选择器.html" alt="css 选择器" target="_blank">css 选择器</a></li>
+              <li><a href="./CSS/3.css创建.html" alt="css 创建" target="_blank">css 创建</a></li>
+              <li><a href="./CSS/4.css背景.html" alt="css 背景" target="_blank">css 背景</a></li>
+              <li><a href="./CSS/5.css文本.html" alt="css 文本" target="_blank">css 文本</a></li>
+              <li><a href="./CSS/6.css字体.html" alt="css 字体" target="_blank">css 字体</a></li>
+              <li><a href="./CSS/7.css链接.html" alt="css 链接" target="_blank">css 链接</a></li>
+              <li><a href="./CSS/8.css列表.html" alt="css 列表" target="_blank">css 列表</a></li>
+              <li><a href="./CSS/9.css表格.html" alt="css 表格" target="_blank">css 表格</a></li>
+              <li><a href="./CSS/10.css盒子模型.html" alt="css 盒子模型" target="_blank">css 盒子模型</a></li>
             </ol>            
           </td>
 
