--- a/CSS/2.css选择器.html
+++ b/CSS/2.css选择器.html
@@ -28,5 +28,22 @@
         <li>p.center {} ：可以单独设置带 center 类属性值的某一种元素格式 </li>
       </ul> 
     </p>
+    <h2>分组和嵌套</h2>
+    <h3>分组选择器</h3>
+    <p>当多个元素具有相同的样式时，可以用分组选择器同时设置这些元素的样式：</p>
+    <b>只需将各个选择器以逗号间隔列出来即可。比如以下样式表将 h1、h2 和 p 三种元素都设置为绿色字体：</b>
+    <pre>
+      <code>
+        h1,h2,p {
+          color: green;
+        }
+      </code>
+    </pre>
+    <h3>嵌套选择器</h3>
+    <p>用于指定选择器内部某个或某些选择器的样式。</p>
+    <p>可以按嵌套顺序<b>以空格隔开</b>列出选择器即可：</p>
+    <p>.marked p{} ：为所有 class='marked' 元素里的 p 元素指定样式。</p>
+    <p>或者可以按嵌套顺序<b>以.指定</b>属于某类的选择器：</p>
+    <p>p.marked{} ：为所有 class='marked' 的 p 元素指定样式。</p>
   </body>
 </html>
