--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="stylesheet" href="./css/main.css" /> -->
+    <link rel="shortcut icon" href="./images/avatar.png"/>
     <style type="text/css">
       body {
         
@@ -90,6 +91,9 @@
               <li><a href="./CSS/8.css列表.html" alt="css 列表" target="_blank">css 列表</a></li>
               <li><a href="./CSS/9.css表格.html" alt="css 表格" target="_blank">css 表格</a></li>
               <li><a href="./CSS/10.css盒子模型.html" alt="css 盒子模型" target="_blank">css 盒子模型</a></li>
+              <li><a href="./CSS/11.css尺寸.html" alt="css 尺寸" target="_blank">css 尺寸</a></li>
+              <li><a href="./CSS/12.css显示与可见性.html" alt="css 显示与可见性" target="_blank">css 显示与可见性</a></li>
+              <li><a href="./CSS/13.css定位.html" alt="css 定位" target="_blank">css 定位</a></li>
             </ol>            
           </td>
 
