add some new page and examples

--- a/index.html
+++ b/index.html
@@ -94,7 +94,24 @@
               <li><a href="./CSS/11.css尺寸.html" alt="css 尺寸" target="_blank">css 尺寸</a></li>
               <li><a href="./CSS/12.css显示与可见性.html" alt="css 显示与可见性" target="_blank">css 显示与可见性</a></li>
               <li><a href="./CSS/13.css定位.html" alt="css 定位" target="_blank">css 定位</a></li>
-            </ol>            
+            </ol>
+          <td>
+            <h2>例子</h2>
+            <ol>
+              <li><a href="./examples/clock.html" alt="css 语法" target="_blank">时钟</a></li>
+              <li><a href="./examples/before-after.html" alt="css 选择器" target="_blank">:before 和 :after</a></li>
+              <li><a href="./examples/box-shadow/index.html" alt="css 创建" target="_blank">阴影</a></li>
+              <li><a href="./examples/box-radius/index.html" alt="css 创建" target="_blank">圆角</a></li>
+            </ol>
+          </td>
+          <td style="border-left: 1px dashed; padding-left: 10px;">
+            <h2>参考</h2>
+            <ol>
+              <li><a href="https://tympanus.net/Development/CreativeLinkEffects/" alt="Creative Link Effects" target="_blank">Creative Link Effects</a></li>
+              <li><a href="https://css-tricks.com/examples/ShapesOfCSS/" alt="The Shapes of CSS" target="_blank">The Shapes of CSS</a></li>
+              <li><a href="https://www.jianshu.com/p/9a463d50e441" alt="CSS绘制三角形—border法" target="_blank">CSS绘制三角形—border法</a></li>
+              <li><a href="https://blog.csdn.net/ladream/article/details/104828444" alt="css 中::before ::after 的用法" target="_blank">css 中::before ::after 的用法</a></li>
+            </ol>
           </td>
 
         </tr>
